Added a background image. Changed the padding, margin, font size and color. Changed how the todo list displays

--- a/src/TodoListItem.module.css
+++ b/src/TodoListItem.module.css
@@ -1,6 +1,12 @@
 
 
 .ListItem {
-    color: red;
+    color: black;
+    font-size: large;
+    padding: 10px;
+    margin: 10px;
 }
 
+.RemoveButton {
+ 
+}
