--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,15 +5,42 @@
 
 html {
     height: 100%;
-    width: 100%;
+    width: 100%;    
+
+    font-family: 'Nunito', sans-serif;
+
+    background-image: url("../img/Background.JPG");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
 }
 
 body {
-    background: whitesmoke;
-    font-family: 'Nunito', sans-serif;
+    background: rgba(255, 255, 0, 0.918);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 500px;
+    padding: 1.875rem;
+    border-radius: 0.625rem;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
+ 
+}
 
+h1 {
+    font-size: 3em;
+    color: rgba(24, 173, 32, 0.938);
+    font-weight: 900;
 }
 
 button {
     cursor: pointer;
+}
+
+@media screen {
+    
 }
